# FMod_emscripten_cmake

./: .clang-format  CMakeLists.txt  index.html  main.cpp  readme.md
assets/: Master.strings.bank
